<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_app"
        app:layout_constraintBottom_toBottomOf="@+id/textNameLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="-20dp"
        android:id="@+id/viewDesing"
        />

    <TextView
        android:id="@+id/textNameLevel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/amb_app"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNameLevel1"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="1"
        android:shadowRadius="3" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/viewDesing"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/start_dime"
        android:textSize="@dimen/dimen_text_edt"
        android:text="@string/celular"
        android:textStyle="bold"
        android:id="@+id/txt_celular"
        >
    </TextView>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_dime"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/celular"
        android:minHeight="48dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/txt_celular"></androidx.appcompat.widget.AppCompatEditText>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_clave"
        app:layout_constraintTop_toBottomOf="@id/edt_celular"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/start_dime"
        android:textSize="@dimen/dimen_text_edt"
        android:text="@string/clave"
        android:textStyle="bold"
        >
    </TextView>


    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_clave"
        android:layout_marginStart="@dimen/start_dime"
        android:layout_marginEnd="20dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/clave"
        android:minHeight="48dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_clave"
        android:inputType="textPassword"
        />

<!--
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_dime"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_switch"
        android:backgroundTint="@color/color_app"
        android:minHeight="38dp"
        android:textOff="Off"
        android:textOn="On"
        android:thumbTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_clave"></Switch>
-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_clave"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:id="@+id/linear_container_switch"
        >
        <com.suke.widget.SwitchButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_dime"
            app:sb_checked="true"
            tools:ignore="TouchTargetSizeCheck"
            android:layout_gravity="center_vertical"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recordar"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_marginStart="3dp"
            ></TextView>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_container_switch"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/black"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/entrar"
        android:textColor="@color/white"
        >
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/olvido_su_clave"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        >
    </TextView>






</androidx.constraintlayout.widget.ConstraintLayout>